# clap-mc

./: .gitignore  README.md  functionalDetector  functionalDetector.py  functional_detector.py  hello.py  pyproject.toml  tray.py
clap-detection/: live.py  playback_controller.py  predict.py
gui/: bun.lockb  package.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: lib.rs
gui/src/routes/: +page.svelte
