[project]
name = "clapplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0",
    "librosa>=0.10.2.post1",
    "numba>=0.60.0",
    "numpy>=2.0.2",
    "pydub>=0.25.1",
    "scipy>=1.15.1",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]
