[project]
name = "clapplay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0",
    "numpy>=2.0.2",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pynput>=1.7.7",
    "scipy>=1.15.1",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.0",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
]
